--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blktap-archipelago (2.1-1~wheezy) wheezy; urgency=low
+
+  * New upstream version
+
+ -- Filippos Giannakos <philipgian@grnet.gr>  Mon, 10 Nov 2014 16:59:24 +0200
+
 blktap-archipelago (2.1~rc2-1~wheezy) wheezy; urgency=low
 
   * New upstream version 
@@ -25,5 +31,6 @@ blktap-archipelago (2.0.90-1) unstable; urgency=low
   * Initial release. (Closes: #635115)
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 21 Jul 2011 17:08:44 +0000
+
 
 
